force-app/main/default/objects/ampi__Project_IATI_Policy__c/ampi__Project_IATI_Policy__c.object-meta.xml
<CustomObject>
    <description>Custom object to track the relationship between catalog IATI Policies and Projects in Amp Impact</description>
    <label>Project IATI Policy</label>
    <nameField>
        <displayFormat>PIP-{00000}</displayFormat>
        <label>Project IATI Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project IATI Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>