force-app/main/default/objects/ampi__Project_IATI_Policy__c/fields/ampi__IATI_Policy__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Policy__c</fullName>
    <description>This is the secondary master-detail relationship on Project IATI Policy</description>
    <label>IATI Policy</label>
    <referenceTo>ampi__IATI_Policy__c</referenceTo>
    <relationshipLabel>Project IATI Policies</relationshipLabel>
    <relationshipName>Project_IATI_Policies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>