force-app/main/default/objects/ampi__Project_IATI_Policy__c/fields/ampi__Policy_Significance__c.field-meta.xml
<CustomField>
    <fullName>ampi__Policy_Significance__c</fullName>
    <description>Picklist field to rate the significance of a policy toward a project.</description>
    <inlineHelpText>Rate the significance of a policy towards the related project</inlineHelpText>
    <label>Policy Significance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not targeted</fullName>
            </value>
            <value>
                <fullName>Significant objective</fullName>
            </value>
            <value>
                <fullName>Principal objective</fullName>
            </value>
            <value>
                <fullName>Principal objective AND in support of an action programme</fullName>
            </value>
            <value>
                <fullName>Explicit primary objective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>