force-app/main/default/objects/ampi__Project_IATI_Policy__c/fields/ampi__Policy_Significance_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Policy_Significance_Code__c</fullName>
    <description>This formula field generates a code based on the value selected in the ampi__Policy_Significance__c picklist.</description>
    <formula>CASE(TEXT(ampi__Policy_Significance__c),
&apos;Not targeted&apos;,0,
&apos;Significant objective&apos;,1,
&apos;Principal objective&apos;,2,
&apos;Principal objective AND in support of an action programme&apos;,3,
&apos;Explicit primary objective&apos;,4,
null
)</formula>
    <label>Policy Significance Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>