force-app/main/default/objects/ampi__Project_IATI_Policy__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <description>This is the primary master-detail relationship on Project IATI Policy.</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Project IATI Policies</relationshipLabel>
    <relationshipName>Project_IATI_Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>